--- a/writing/main.tex
+++ b/writing/main.tex
@@ -57,10 +57,12 @@
 　以上の議論は共に、政策領域に対する注目度や関心の高さを、議会審議や政策変化をもたらす要因として理解している。こうした社会的な注目度が政策変化や積極的な議員行動をもたらすという発想は、議会研究においても引き継がれている。\citet*{Binder2017-wr}や\citet*{Adler2013-ay}の注目度がこう着状態を緩和するという議論だけではなく、議会における政党の役割を論じた\citet*[Ch.6]{Cox2005-pn}においても、政党が自らに不都合な法案審議を阻害するコストとして社会的な注目度が論じられている。これも、注目度が高いという要因が政策的変化を促進する機能を果たしているという理解である。\\
 
 \subsection{注目度による負の影響}
-　他方で、政策領域に対する注目度は必ずしも政策変化や審議を推し進める変数として機能するとは限らない。以下、簡単に社会的な注目度の高さが政策変化を阻害する可能性について検討する。\\
+　他方で、政策領域に対する注目度は必ずしも政策変化や審議を推し進める変数として機能するとは限らない。以下、社会的な注目度の高さが政策変化を阻害する可能性について検討する。\\
 　政策領域が社会的な注目を集めるという現象は、法案を提出する側からすれば自らの法案に対する追い風として機能することが考えられる。議員が選挙区民の代表者である以上は、有権者の意思を無視して立法活動を行うということは選挙上のコストを支払うことになる。もし、社会的に注目度の高い法案に対して反対するという行為が有権者の意思にそぐわないものであれば、反対の立場を表明した議員は選挙戦略上一定のコストを支払うことになるだろう。こうして、社会的な注目度の高い法案に反対する、もしくはその審議を阻害することは選挙におけるコストとして機能し、結果として法案審議がより容易に進む要因となると考えられる。これが先行研究が社会的な注目度を法案通過や政策変化にとって好ましい状況として理解してきた所以である。\\
 　しかし、この議論には重要な仮定が存在している。社会的に注目を集める法案に対する有権者もしくは選挙区民の立場が提出された法案を可決すべきというものである場合に、以上の議論は成立する。端的に言えば、法案に対して賛成することが、多くの選挙区民にとって好ましいのであれば社会的注目度はこう着状態を緩和すると考えられる。\\
-　では、有権者の多くが特定の政策的立場を共有しているという現象はアメリカ政治でどの程度生じているといえるだろうか。エリートレベルで考える場合、結論は明確だろう。アメリカ史の中で党派的な投票行動が緩和されるのは極めて稀な現象であり、多くの時期は党派的な対立が存在してきた。\citep*{Poole2007-ir,}
+　では、有権者の多くが特定の政策的立場を共有しているという現象はアメリカ政治でどの程度生じているといえるだろうか。エリートレベルで考える場合、結論は明確だろう。アメリカ史の中で党派的な投票行動が緩和されるのは稀な現象であり、多くの時期は党派的な対立が存在してきた。\citep*{Poole2007-ir,}現代に至っては、政治的対立のない政策領域を探す方がむしろ困難ともいえる。端的に言えば、「議員の大多数にとって反対することにより選挙上のコストを支払うことになる政策」が存在するために必要な、有権者一般における広範な合意という前提条件は非現実的な仮定であるということである。\\
+　アメリカ社会において広範な合意を形成することが困難であるということは、何らかの立法提案に対して、反対することで選挙上の利益を得ることのできる議員が一定数存在することを意味する。例えば、連邦議会で人工妊娠中絶の権利を立法化しようとする動きは、リベラルな州において一定の評価を受けると考えられる。この場合、リベラルな選挙区に基盤を持つ議員は法案に賛成し、議会を通過するための努力することで選挙において自身の実績を主張することができる。では、保守的な基盤を有する議員にとってはこの法案に対していかなる応答が適切だろうか。保守的な有権者にとって、少なくとも連邦レベルにおいて人工妊娠中絶の権利が法制化されることは避けたい事態だと考えられる。この場合、保守的な議員にとって最適な行動は、この法案の成立を阻止することで「望ましくない法案を阻止した」という実績を得るということになるだろう。\\
+　では、連邦議会において立法提案に反対するだけでなく、その立法を阻害することは実際に可能なのだろうか。誰が法案を提出するのかにも依存するが、最も困難な場合においても法案を促進することは可能であると考えられる。提出された法案を廃案に追い込む際、最も困難なのは、多数党の提出した法案を少数党が阻害するという場合だろう。事実、多数党は議場において法案審議を促進、阻害するための制度的権限を多数有している。\citep*{Aldrich1995-xf,Cox2005-pn,Cox2007-xq,Sinclair2016-kh}多数党は委員長職を独占することで、提出された法案の中からどの法案を実質的な検討の俎上に載せるのか判断することが可能であり、全院委員会などの議場における手続きも多数党に有利な条件として機能している。他方で、少数党であっても法案審議に対して一定以上の影響を与えていることが近年指摘されている。\\
 　すなわち、政策領域に対して関心が高まるという現象は、法案審議を停滞させる機能を果たす場合もあり得るということである。\\
 　以下では、社会的な注目度と法案審議との関係性を観察データを用いて分析する。\\
 
@@ -270,7 +272,9 @@
 \subsection{議決法案における傾向}
 　第二に、実質的な法案審議に対してメディア報道と有権者の関心度合いがいかなる影響を示しているのかを分析する。表3は下院及び上院において議場での投票にかけられた法案数を被説明変数として同様の分析を行ったものである。\\
 　表3は下院について議決結果への効果を分析したものである。まず指摘できるのは、法案提出の場合と異なり、議決に至る法案数に対しては、メディア報道量の点推定値が負になっている。これは5\%水準で有意な結果であり、有権者の関心度合いを統制しても同様の結果が示されている。\\
+　ここから、メディアにおける報道が下院において審議を阻害する要因として機能する傾向にあることを指摘できる。先行研究を整理する中でも触れた通り、メディア報道などにより計測される関心度合いの高さは従来、立法や政策変化を促進する要因として理解されてきた。他方で、本分析結果が示しているのは、メディアにおける報道とその政策領域における立法生産との間に負の関係性が観察できるということである。\\
 　有権者の関心度合いを示す点推定値は有意ではないものの、提出法案数同様に正の影響を示しており、こちらもメディア報道を統制しても大きな変化はない。統制変数についても大きな法案提出と大きな差異は見られない。\\
+　興味深いのは、法案提出傾向においては効果の方向性が一致していたメディア報道量と有権者の関心度合いとが異なる効果を示している点である。この推定値を積極的に解釈するのであれば、有権者の関心動向とメディアにおける報道の傾向とは異なる側面を有しており、有権者の関心が高い場合には立法を促進しうるものの、メディアで積極的に取り上げられるような場合には立法にとっての阻害要因として機能するということになるだろう。メディアにおける報道が社会的な課題を直接的に反映するものではなく、むしろ一定の条件を満たす課題に焦点を当てることが指摘されている\citep*{Boydstun2013-ph}ことからも、メディアにおける報道が有権者の関心度合いと異なる傾向を示す可能性は十分にあると思われる。\\
 　表4は上院について同様の分析を行ったものである。独立変数の点推定値については下院と大きな差はないが、上院の場合メディア報道の効果は有意でない。また、統制変数の中で分割政府が負の点推定値となっており、下院と若干異なっている。\\
 　ここまでの分析結果をまとめると以下のことが言える。まず、上下院で共にメディア報道の議決数に対する効果が負になっており、メディア報道量と議案審議数の間に負の関係性が存在することを示すといえる。これは先行研究が注目度という変数を法案審議や立法生産を促す変数として理解してきたこと\citep*{Binder2003-bn,Binder2017-wr,Adler2013-ay}とは明確に異なる結果である。この効果は有権者の関心度合いを統制した場合でも大きな変化がない。すなわち、メディア報道は特に法案の議決段階において立法生産をむしろ抑制する傾向が観察されたということである。\\
 
