--- a/writing/reference.bib
+++ b/writing/reference.bib
@@ -608,6 +608,41 @@
   year      =  1998
 }
 
+@BOOK{Boydstun2013-ph,
+  title     = "Making the News: Politics, the Media, and Agenda Setting",
+  author    = "Boydstun, Amber E",
+  abstract  = "Media attention can play a profound role in whether or not
+               officials act on a policy issue, but how policy issues make the
+               news in the first place has remained a puzzle. Why do some
+               issues go viral and then just as quickly fall off the radar? How
+               is it that the media can sustain public interest for months in a
+               complex story like negotiations over Obamacare while ignoring
+               other important issues in favor of stories on ``balloon boy?''
+               With Making the News, Amber Boydstun offers an eye-opening look
+               at the explosive patterns of media attention that determine
+               which issues are brought before the public. At the heart of her
+               argument is the observation that the media have two modes: an
+               ``alarm mode'' for breaking stories and a ``patrol mode'' for
+               covering them in greater depth. While institutional incentives
+               often initiate alarm mode around a story, they also propel news
+               outlets into the watchdog-like patrol mode around its policy
+               implications until the next big news item breaks. What results
+               from this pattern of fixation followed by rapid change is skewed
+               coverage of policy issues, with a few receiving the majority of
+               media attention while others receive none at all. Boydstun
+               documents this systemic explosiveness and skew through analysis
+               of media coverage across policy issues, including in-depth looks
+               at the waxing and waning of coverage around two issues: capital
+               punishment and the ``war on terror.'' Making the News shows how
+               the seemingly unpredictable day-to-day decisions of the newsroom
+               produce distinct patterns of operation with implications---good
+               and bad---for national politics.",
+  publisher = "University of Chicago Press",
+  month     =  aug,
+  year      =  2013,
+  language  = "en"
+}
+
 @ARTICLE{Burstein2003-vs,
   title     = "The Impact of Public Opinion on Public Policy: A Review and an
                Agenda",
